horizontal scroll on mob ile fixed

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
   background: #000;
   border-color: #3b3b3b;
   user-select: none;
-  overflow-x: hidden;
+  overflow-x: hidden; /* Ensure no horizontal overflow */
   scrollbar-width: thin;
   scrollbar-color: rgba(255, 255, 255, 0.5) transparent;
 }
@@ -36,6 +36,7 @@ body::-webkit-scrollbar-thumb {
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 3px;
 }
+
 @supports (-webkit-overflow-scrolling: touch) {
   html,
   body {
@@ -43,8 +44,11 @@ body::-webkit-scrollbar-thumb {
     -webkit-overflow-scrolling: touch;
   }
 }
+
 canvas {
   touch-action: none;
+  max-width: 100%; /* Ensure canvas doesn’t exceed viewport width */
+  height: 100%; /* Ensure canvas height respects its container */
 }
 
 .feature-video {
@@ -92,6 +96,8 @@ canvas {
 
   .common-padding {
     @apply sm:py-32 py-20 sm:px-10 px-5;
+    overflow-x: hidden; /* Ensure no horizontal overflow */
+    max-width: 100vw; /* Ensure container does not exceed viewport */
   }
 
   .section-heading {
